--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,10 +2,10 @@
 spring.application.name=electronic-department
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/electronic_department?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/electronic_department?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=your_mysql_password
+spring.datasource.username=dept_user
+spring.datasource.password=b8ef2g6
 
 # JPA Configuration for MySQL
 spring.jpa.hibernate.ddl-auto=update
@@ -15,6 +15,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Disable H2 Console in production
 spring.h2.console.enabled=false
+
+# Flyway (enabled in prod)
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+# Disable automatic data initialization in production
+app.data.initialize=false
 
 # Production Logging
 logging.level.com.kursova=INFO
