FIXED: Унифицирована система категорий и типов оценок (v0.8.0)
Исправлена проблема с разнобежностью в бэкенде и фронтенде с категориями и типами оценок в базе данных, фильтрах, таблицах, полях информации и списках выбора.

ИЗМЕНЕНИЯ В БЭКЕНДЕ:
- Создан enum GradeCategory с категориями: CURRENT_CONTROL, FINAL_CONTROL, RETAKE, MAKEUP
- Обновлен enum GradeType с корректными типами работ для каждой категории
- Обновлены сущности Grade и ArchivedGrade с новым полем gradeCategoryEnum
- Обновлены GradeDto и GradeMapper для поддержки новой системы категорий
- Добавлен метод автоматического определения категории из типа оценки

МИГРАЦИЯ БАЗЫ ДАННЫХ:
- V10__update_grade_category_system.sql: добавлена колонка grade_category_enum
- Обновлен ENUM grade_type с новыми значениями по категориям
- Миграция существующих данных в новую систему
- Удаление устаревшей колонки grade_category

ИЗМЕНЕНИЯ В ФРОНТЕНДЕ:
- Унифицированы фильтры категорий и типов работ на всех страницах
- Обновлены переводы в translateGradeType() и translateGradeCategory()
- Исправлены формы добавления/редактирования оценок
- Синхронизированы модальные окна для всех ролей (ADMIN, MANAGER, TEACHER, STUDENT)

ИСПРАВЛЕНИЯ В ТЕСТАХ И КОНФИГУРАЦИИ:
- Добавлена аннотация @EnableMethodSecurity в SecurityConfig
- Обновлен JwtAuthFilter с поддержкой userDetailsService
- Добавлена обработка AccessDeniedException в GlobalExceptionHandler
- Исправлен DateTimeMapper с добавлением .trim() для тестов
- Flyway отключен по умолчанию в properties

ФАЙЛЫ ТЕСТОВ:
- Добавлены тесты: SubjectServiceTest, StudentServiceTest, TeacherServiceTest
- Добавлены тесты: DateTimeMapperTest, DbUserDetailsServiceTest, GroupControllerTest
- Добавлены тесты: JwtAuthFilterTest, JwtUtilsTest, StudentGroupServiceTest

Теперь все страницы показывают одинаковые категории и типы оценок, фильтры работают корректно, все роли видят согласованную информацию.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Flyway (disabled in default/dev profile to avoid DB-driver compatibility issues)
+# Flyway Configuration
+# To enable Flyway migrations, set spring.flyway.enabled=true
+# When enabled, these settings will apply:
 spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.clean-disabled=false
 
 # Control automatic data initialization (DataInitializer)
 # If true or missing, initializer will run when DB empty. Set to false in prod to disable.
