--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
-      <version>8.0.33</version>
+      <version>8.4.0</version>
     </dependency>
 
     <!-- MapStruct for mapping between layers -->
@@ -139,7 +139,13 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-      <version>9.22.3</version>
+      <version>10.17.0</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-mysql</artifactId>
+      <version>10.17.0</version>
     </dependency>
 
     <!-- JWT -->
@@ -203,12 +209,17 @@
       <plugin>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-maven-plugin</artifactId>
-        <version>9.22.3</version>
+        <version>10.17.0</version>
         <dependencies>
           <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
+            <version>8.4.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>10.17.0</version>
           </dependency>
         </dependencies>
       </plugin>
