--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,10 +16,15 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Disable H2 Console in production
 spring.h2.console.enabled=false
 
-# Flyway (enabled in prod)
+# Flyway Configuration
+# To enable Flyway migrations, set spring.flyway.enabled=true
+# When enabled, these settings will apply:
 spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.clean-disabled=false
+
 
 # Disable automatic data initialization in production
 app.data.initialize=false
